--- a/LightHub/src/index.css
+++ b/LightHub/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .btn-primary-mini{
-  @apply px-2 py-1 bg-orange-500 cursor-pointer rounded text-gray-50 text-center text-sm min-w-20 h-7 leading-5;
+  @apply px-2 py-1 bg-orange-500 cursor-pointer rounded text-gray-50 text-center text-sm h-7 leading-5;
 }
 
 .btn-plain{
@@ -16,7 +16,7 @@
 }
 
 .btn-plain-mini{
-  @apply px-2 py-1 text-orange-500 cursor-pointer rounded bg-orange-50 text-center text-sm min-w-20 h-7 leading-5;
+  @apply px-2 py-1 text-orange-500 cursor-pointer rounded bg-orange-50 text-center text-sm h-7 leading-5;
 }
 
 .card{
